--- a/HerosOfPymoli/HerosOfPymoli.ipynb
+++ b/HerosOfPymoli/HerosOfPymoli.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create reousrce file location\n",
+    "# Create resource file location\n",
     "purchase_data = ('Resources/purchase_data.csv')"
    ]
   },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -255,37 +255,30 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get number of unique items purchased\n",
-    "num_item = pd_df['Item ID'].nunique()\n",
-    "\n",
-    "# Get the average price per item\n",
-    "avg_price = '${0:,.2f}'.format(pd_df['Price'].mean())\n",
-    "\n",
-    "#Get the total number of purchases\n",
-    "tot_purchases = pd_df['SN'].count()\n",
-    "\n",
-    "# Get the total revenue for the purchases\n",
-    "tot_rev = '${0:,.2f}'.format(pd_df['Price'].sum())\n",
+    "# Calculate item purchase metrics\n",
+    "num_item = pd_df['Item ID'].nunique() # Get number of unique items purchased\n",
+    "avg_price = '${0:,.2f}'.format(pd_df['Price'].mean()) # Get the average price per item\n",
+    "tot_purchases = pd_df['SN'].count() # Get the total number of purchases\n",
+    "tot_rev = '${0:,.2f}'.format(pd_df['Price'].sum()) # Get the total revenue for the purchases\n",
     "\n",
     "# Create a summary table for the Purchasing Analysis\n",
-    "purchase_df = pd.DataFrame({'Number of Unique items':num_item,\n",
-    "                            'Average Price':avg_price,\n",
-    "                            'Number of Purchases':tot_purchases,\n",
-    "                            'Total Revenue':tot_rev},\n",
-    "                           index = [0]\n",
+    "purchase_df = pd.DataFrame({'Number of Unique items':[num_item],\n",
+    "                            'Average Price':[avg_price],\n",
+    "                            'Number of Purchases':[tot_purchases],\n",
+    "                            'Total Revenue':[tot_rev]},\n",
     "                          )\n",
     "purchase_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -346,24 +339,21 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create new df to group numbers by gender\n",
-    "# Deleting dupes in the player SN to get a unique number of player in the group by\n",
-    "gender_df = pd_df.drop_duplicates('SN')\n",
-    "\n",
-    "# Running a groupby to break out stats by Gender\n",
-    "new_gender_df = gender_df.groupby('Gender')\n",
+    "# Deleting dupes in the player SN to get a unique number of players in the group by\n",
+    "new_gender_df = pd_df.drop_duplicates('SN').groupby('Gender')\n",
     "\n",
     "# Counting number of players by Gender using player SN\n",
-    "gender_count_uni = new_gender_df['SN'].count()\n",
+    "gender_count = new_gender_df['SN'].count()\n",
     "\n",
     "# New DataFrame with a total count column by gender\n",
-    "gender_df = pd.DataFrame({'Total Count':gender_count_uni})\n",
+    "gender_df = pd.DataFrame({'Total Count':gender_count})\n",
     "\n",
     "# Calculating total number of players for percentage calc\n",
     "total_count = gender_df['Total Count'].sum()\n",
@@ -379,42 +369,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_0915c328_c235_11ea_bd18_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Purchase Count</th>        <th class=\"col_heading level0 col1\" >Average Purchase Price</th>        <th class=\"col_heading level0 col2\" >Total Purchase Value</th>        <th class=\"col_heading level0 col3\" >Average Total Purchase per Person</th>    </tr>    <tr>        <th class=\"index_name level0\" >Gender</th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>        <th class=\"blank\" ></th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_0915c328_c235_11ea_bd18_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
+       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row0\" class=\"row_heading level0 row0\" >Female</th>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col0\" class=\"data row0 col0\" >113</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col1\" class=\"data row0 col1\" >$3.20</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col2\" class=\"data row0 col2\" >$361.94</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row0_col3\" class=\"data row0 col3\" >$4.47</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_0915c328_c235_11ea_bd18_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
+       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row1\" class=\"row_heading level0 row1\" >Male</th>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col0\" class=\"data row1 col0\" >652</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col1\" class=\"data row1 col1\" >$3.02</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col2\" class=\"data row1 col2\" >$1,967.64</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row1_col3\" class=\"data row1 col3\" >$4.07</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_0915c328_c235_11ea_bd18_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
-       "                        <td id=\"T_0915c328_c235_11ea_bd18_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
+       "                        <th id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640level0_row2\" class=\"row_heading level0 row2\" >Other / Non-Disclosed</th>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col0\" class=\"data row2 col0\" >15</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col1\" class=\"data row2 col1\" >$3.35</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col2\" class=\"data row2 col2\" >$50.19</td>\n",
+       "                        <td id=\"T_b931eb1c_c236_11ea_833e_8cc84b311640row2_col3\" class=\"data row2 col3\" >$4.56</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x12a484f38c8>"
+       "<pandas.io.formats.style.Styler at 0x12a486e3108>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,17 +414,11 @@
     "# Sorting the DataFrame just by gender for total purchase\n",
     "purch_df = pd_df.groupby('Gender')\n",
     "\n",
-    "# Counting total purchases by gender using player SN\n",
-    "purch_count = purch_df['SN'].count()\n",
-    "\n",
-    "# Calculating Average Purchase price\n",
-    "avg_purch_price = purch_df['Price'].mean()\n",
-    "\n",
-    "# Calculating Total Purchase Value\n",
-    "tot_purch_val = purch_df['Price'].sum()\n",
-    "\n",
-    "# Calculating Average purchse per person/gender\n",
-    "avg_per = tot_purch_val/gender_count_uni\n",
+    "# Calculating purchase metrics by gender\n",
+    "purch_count = purch_df['SN'].count() # Counting total purchases by gender using player SN\n",
+    "avg_purch_price = purch_df['Price'].mean() # Average Purchase price\n",
+    "tot_purch_val = purch_df['Price'].sum() # Total Purchase Value\n",
+    "avg_per = tot_purch_val/gender_count_uni # Average purchase per person/gender\n",
     "\n",
     "# Generating DataFrame purchase stats by geneder\n",
     "gender_purchase = pd.DataFrame({'Purchase Count':purch_count,\n",
@@ -452,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -543,14 +527,23 @@
        "40+                   12                 2.08%"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Making bins to create age brackets\n",
-    "bins = [0,9,14,19,24,29,34,39,45]\n",
+    "max_age = pd_df['Age'].max()\n",
+    "min_age = 10 # Min age value set by desired bin categories\n",
+    "size = (max_age - min_age)/7 # sets equal sized bins\n",
+    "\n",
+    "bins = [0] # Initiates with a zero for lower limit\n",
+    "for i in range (0,8):\n",
+    "    bins.append((min_age-1) + (size*i)) # min_age - 1 since first bin is <10, not <=10\n",
+    "if bins[8] < max_age:\n",
+    "    bins[8] = max_age # setting upper bin value to include max age of 45 (bin would otherwise include up to 44 only)\n",
+    "\n",
     "labels = ['<10',\n",
     "          '10-14',\n",
     "          '15-19',\n",
@@ -583,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +698,7 @@
        "40+                                 $3.19  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +808,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +821,6 @@
     "top_spend_count = top_spend_df['SN'].count() # Total Purchases by player\n",
     "top_spend_mean = top_spend_df['Price'].mean() # Average purchase price\n",
     "top_spend_total = top_spend_df['Price'].sum() # Total purchase value\n",
-    "top_spend_total\n",
     "\n",
     "# DataFrame to record purchase stats by player\n",
     "top_spend = pd.DataFrame({'Purchase Count':top_spend_count,\n",
@@ -844,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +939,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,15 +947,15 @@
    "source": [
     "# Creating Popular Items by total purchase count\n",
     "# DataFrame to bring in item info\n",
-    "pop_df = pd.DataFrame({'Item ID':pd_df['Item ID'],\n",
-    "                       'Item Name':pd_df['Item Name'],\n",
-    "                       'Item Price':pd_df['Price']}\n",
-    "                     ).groupby(['Item ID','Item Name'])\n",
+    "pop_df = pd_df.loc[:, ['Item ID',\n",
+    "                       'Item Name',\n",
+    "                       'Price']\n",
+    "                  ].groupby(['Item ID','Item Name'])\n",
     "\n",
     "# Calculating Price Metrics\n",
-    "pop_count = pop_df['Item Price'].count() # Total purchases by Item\n",
-    "pop_total = pop_df['Item Price'].sum() # Total purchase value by item\n",
-    "pop_price = pop_df['Item Price'].mean() # Avg purchase price of each item\n",
+    "pop_count = pop_df['Price'].count() # Total purchases by Item\n",
+    "pop_total = pop_df['Price'].sum() # Total purchase value by item\n",
+    "pop_price = pop_df['Price'].mean() # Avg purchase price of each item\n",
     "\n",
     "# DataFrame to print top item metrics\n",
     "pop_agg = pd.DataFrame({'Purchase Count':pop_count,\n",
@@ -979,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1074,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
